[tool.poetry]
name = "tutoring-projects"
version = "0.1.0"
description = ""
authors = ["Zachary Nawrocki <zacknawrocki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tk = "^0.1.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
